# I-Simpa

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  DESCRIPTION.txt  LICENSE.md  README.md  appveyor.yml  make_flatpak.sh  org.noise_planet.i-simpa.appdata.xml  org.noise_planet.i-simpa.desktop  org.noise_planet.i-simpa.yml
src/VolumetricMeshRepair/: CMakeLists.txt  CellProcess.odt  TestSimplification.ply  TestSimplification_out.3ds  VolumetricMeshRepair.vcxproj.filters  adaptative_mesh_guide.cpp  adaptative_mesh_guide.hpp  main_remesh.cpp  main_remesh.hpp  mathlib.h  scalar_field_creator.cpp  scalar_field_creator.hpp  smart_macro.h  sortVols.py  spacial_discretisation.cpp  spacial_discretisation.hpp  spatial_discretization.cpp  spatial_discretization.hpp  test.txt  triang_cubic_meshing.cpp  triang_cubic_meshing.hpp  triang_marching_cube.cpp  triang_marching_cube.hpp  triang_marching_tetra.cpp  triang_marching_tetra.hpp  triangle_feeder.cpp  triangle_feeder.hpp  triangulator.cpp  triangulator.hpp
src/VolumetricMeshRepair/NormalPlaneEvaluation/: bestfit.cpp  bestfit.h  link.txt
src/VolumetricMeshRepair/manager/: smart_ptr.h
src/VolumetricMeshRepair/tools/: intersection_algo.h  intersection_tri.cpp  intersection_tri.h
src/ctr/: CMakeLists.txt  TC_CalculationCore.cpp  TC_CalculationCore.h  ctrVersion.h.in  main_tc.cpp  tcTypes.h
src/ctr/data_manager/: core_configuration.h
src/ctr/doc_analyseCore/: tc_analyse.odt
src/ctr/input_output/: reportmanager.cpp  reportmanager.h
src/isimpa/: CMakeLists.txt  ConvertUTF.c  ConvertUTF.h  I-SIMPA.project  I-SIMPA.workspace  I-SIMPA.workspace.session  Important_progression.odt  Info.plist  UpgradeLog.XML  UtfConverter.cpp  UtfConverter.h  first_header_include.hpp  isimpa.aps  isimpa_workspc.workspace  last_cpp_include.hpp  nc_curves.cpp  readme.txt
src/isimpa/3dengine/: ArcBall.h  Camera.cpp  Camera.h  GlBitmapSurface.cpp  GlBitmapSurface.h  OpenGLApp.cpp  OpenGLApp.h  OpenGlViewer.cpp  OpenGlViewer.h  legendFonts.cpp  legendFonts.h  legendObject.cpp  legendObject.h
src/isimpa/GL/: opengl_inc.h  wglext.h
src/isimpa/GLwindows/: GL.h  GLU.h  offScreenRendering.cpp  offScreenRendering.h
src/isimpa/IHM/: AboutDialog.cpp  AboutDialog.hpp  ComboTreeCtrl.cpp  ComboTreeCtrl.h  DataWindow.cpp  DataWindow.h  DialogDiagramCreator.cpp  DialogDiagramCreator.h  GabeDataGrid.cpp  GabeDataGrid.hpp  MainPropGrid.cpp  MainPropGrid.h  PropGrid.cpp  PropGrid.h  ProprieteFrame_grid.h  RecepteurSOperationDialog.cpp  RecepteurSOperationDialog.h  WizardRemeshModel.cpp  WizardRemeshModel.hpp  applicationPreferences.cpp  base64.cpp  base64.h  foldpaneltree.h  languageSelection.cpp  languageSelection.hpp  loadingSceneDialog.cpp  loadingSceneDialog.hpp  pyConsole.cpp  pyConsole.hpp  simpleGraph.cpp  simpleGraph.h  simpleGraphArrays.h  simpleGraphDialogs.cpp  simpleGraphDialogs.h  simpleGraphEnumerators.cpp  simpleGraphEnumerators.h  simpleGraphManager.cpp  simpleGraphManager.h  uiTreeCtrl.cpp  uiTreeCtrl.h
src/isimpa/Language/: additionnal_univ.h
src/isimpa/data_manager/: appconfig.cpp  appconfig.h  appconfig_version.cpp.in  drawable_element.cpp  drawable_element.h  e_data.h  e_data_bool.h  e_data_bool_bfreqchoice.h  e_data_color.h  e_data_entier.h  e_data_file.h  e_data_float.h  e_data_font.h  e_data_list.h  e_data_row.h  e_data_row_bandefreq.h  e_data_row_ext_bandefreq.h  e_data_row_materiau.h  e_data_text.h  e_data_tree.h  e_position.h  element.cpp  element.h  logger_tetgen_debug.hpp  projet.cpp  projet.h  projet_calculation.cpp  projet_maillage.cpp  projet_python.cpp  projet_remesh.cpp  projet_undo_redo.cpp
src/isimpa/doxDoc/: addelementDoc.h  doxygenDoc.h  mainDoc.h  translationDoc.h
src/isimpa/lang/: Copie de POcreate.bat  POTcreate.bat  POcreate.bat  fr.po  internat.po  pt_BR.po  zh_CN.po
src/isimpa/macosx/: Info.plist.in
src/isimpa/main/: i_simpa-global.h  i_simpa_main.cpp  i_simpa_main.h
src/isimpa/manager/: bigfilereader.cpp  bigfilereader.h  boollocker.h  generic_typedef.h  interf_logger.hpp  lifetimeWitness.hpp  modelRetriever.cpp  modelRetriever.hpp  processManager.cpp  processManager.h  sppsString.cpp  stringParser.h  stringTools.h
src/isimpa/resources/: License.rtf  isimpa.desktop  isimpa.icns  isimpa.rc  license.html  resource.h
src/lib_interface/: CMakeLists.txt  Makefile.Debug  UpgradeLog.XML  coreString.cpp  coreString.h  coreTypes.cpp  coreTypes.h  coreinitialisation.cpp  coreinitialisation.h  directivityBalloon.cpp  directivityBalloon.h  en_numeric.cpp  en_numeric.hpp  lib_interface.cbp  lib_interface.project  lib_interface.sln  lib_interface.vcxproj.filters  make_qt.py  std_tools.cpp  std_tools.hpp  warnLogLIBInterf.txt  workspce.workspace
src/lib_interface/Core/: Model3D.h  mathlib.h
src/lib_interface/LibDebugging/: lib_debugging.layout  lib_debugging.sln
src/lib_interface/data_manager/: base_core_configuration.cpp  base_core_configuration.h
src/lib_interface/input_output/: baseReportManager.cpp  baseReportManager.h  bin.cpp  bin.h  cxml.cpp  cxml.h  gpl_io.cpp  gpl_io.hpp  part_binary.h  progressionInfo.h  utf8.h
src/lib_interface/manager/: smart_ptr.h
src/lib_interface/python_bindings/: _libsimpa.py.cpp  exposed_decl.pypp.txt  generate_code.py  make.bat  (+2 more)
src/preprocess/: CMakeLists.txt  Preprocess.cpp  Preprocess.vcproj  Preprocess.vcxproj.filters  UpgradeLog.XML  back.cpp  computations.cpp  computations.hpp
src/python_bindings/: CMakeLists.txt  __array_1.pypp.hpp  __call_policies.pypp.hpp  __convenience.pypp.hpp  __init__.py  _libsimpa.py.cpp  doxygen.py  generate_code.py  libsimpa.i  named_tuple.py
src/spps/: CMakeLists.txt  CalculationCore.cpp  CalculationCore.h  sppsInitialisation.cpp  sppsInitialisation.h  sppsNantes.cpp  sppsNantes.layout  sppsNantes.vcproj  sppsNantes.vcxproj  sppsTypes.cpp  sppsTypes.h  sppsVersion.h.in
src/tetgen/: CMakeLists.txt
src/theorie_classique/: CMakeLists.txt  TC_CalculationCore.cpp  TheorieClassique.cbp  TheorieClassique.sln  TheorieClassique.vcproj  TheorieClassique.vcxproj  TheorieClassique.vcxproj.filters  main_tc.cpp
(+1549 files in other folders)
